--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+// Bring in all the styles for Carbon
+@use '@carbon/react';
+
+// Preferred: bring in the styles for one component
+@use '@carbon/react/scss/components/button';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
